package org.example;

interface JSONObjects {
    public void unmarshallJson(String rawJson);
}
